# youtunbe-subtitles-server

./: .gitignore  .http  API_DOC.md  Dockerfile  README.md  docker_rebuild.sh  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py
app/api/: resources.py
app/services/: downloader.py
app/tasks/: scheduler.py
