[tool.poetry]
name = "youtunbe-subtitles-server"
version = "0.1.0"
description = "YouTube视频下载和字幕提取服务"
authors = ["kyros <le@90e.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.2"
flask-restx = "^1.3.0"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.0"
click = "^8.1.7"
yt-dlp = "^2025.4.30"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
